# Lessons_CPP

./: CMakeLists.txt  README.md
BinarySearchTree/: BinarySearchTree.cpp  BinarySearchTree.h  a.out  main.cpp
Callback-function/: Callback-function.cpp  a.out
Enumeration/: CMakeLists.txt  main.cpp
Functional record/: main.cpp
Operations with bits/: BitAlgorithms.cpp  Bits.h  Color.cpp  Float.cpp  a.out  main.cpp
Recursion/: Recursion.cpp  a.out
Smart_pointer/: CMakeLists.txt  main.cpp
